--- a/L1/index.html
+++ b/L1/index.html
@@ -413,19 +413,19 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/mood-disorder.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Mood Disorders</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="depression-service.html">Mood Disorders</a></h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="depression-service.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -433,9 +433,9 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/mood-disorder.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Mood Disorders</a></h3>
+                                    <h3 class="feature-one__title"><a href="depression-service.html">Mood Disorders</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -449,19 +449,19 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/psychosis.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Pychosis</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="pyshosis.html">Pychosis</a></h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="pyshosis.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -469,9 +469,9 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/psychosis.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Pychosis</a></h3>
+                                    <h3 class="feature-one__title"><a href="pyshosis.html">Pychosis</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -485,19 +485,19 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/anxiety.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Anxiety</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="anxiety.html">Anxiety</a></h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="anxiety.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -505,9 +505,9 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/anxiety.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Anxiety</a></h3>
+                                    <h3 class="feature-one__title"><a href="anxiety.html">Anxiety</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -521,21 +521,21 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/addiction.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title">
-                                                <a href="#">Addictions</a>
+                                                <a href="addiction.html">Addictions</a>
                                             </h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="addiction.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -543,10 +543,10 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/addiction.png" />
                                     </div>
                                     <h3 class="feature-one__title">
-                                        <a href="#">Addictions</a>
+                                        <a href="addiction.html">Addictions</a>
                                     </h3>
                                 </div>
                             </div>
@@ -561,7 +561,7 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/childhood.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
@@ -573,7 +573,7 @@
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="childhood-disorders.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -581,7 +581,7 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/childhood.png" />
                                     </div>
                                     <h3 class="feature-one__title"><a href="childhood-disorders.html">Childhood Disorders</a></h3>
                                 </div>
@@ -597,7 +597,7 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/geriatic.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
@@ -609,7 +609,7 @@
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="geriatric-disorders.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -617,7 +617,7 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/geriatic.png" />
                                     </div>
                                     <h3 class="feature-one__title"><a href="geriatric-disorders.html">Geriatric Disorders</a></h3>
                                 </div>
@@ -633,19 +633,19 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/sexual.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Sexual Disorders</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="sexual-disorders.html">Sexual Disorders</a></h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="sexual-disorders.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -653,9 +653,9 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/sexual.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Sexual Disorders</a></h3>
+                                    <h3 class="feature-one__title"><a href="sexual-disorders.html">Sexual Disorders</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -669,21 +669,21 @@
                                     </div>
                                     <div class="feature-one__hover-content">
                                         <div class="feature-one__hover-icon">
-                                            <img src="assets/images/new-home/service-icon.png" />
+                                            <img src="assets/images/new-home/service-cion/stress-anger.png" />
                                         </div>
                                         <div class="feature-one__hover-content-inner">
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
                                             <h3 class="feature-one__hover-title">
-                                                <a href="#">Stress & Anger</a>
+                                                <a href="stress-anger.html">Stress & Anger</a>
                                             </h3>
                                             <!--<p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>-->
                                         </div>
                                         <div class="feature-one__hover-arrow-box">
-                                            <a href="why-us-sattva.html" class="feature-one__hover-arrow">
+                                            <a href="stress-anger.html" class="feature-one__hover-arrow">
                                                 <span class="icon-right-arrow"></span>
                                             </a>
                                         </div>
@@ -691,10 +691,10 @@
                                 </div>
                                 <div class="feature-one__content">
                                     <div class="feature-one__icon">
-                                        <img src="assets/images/new-home/service-icon.png" />
+                                        <img src="assets/images/new-home/service-cion/stress-anger.png" />
                                     </div>
                                     <h3 class="feature-one__title">
-                                        <a href="#">Stress & Anger</a>
+                                        <a href="stress-anger.html">Stress & Anger</a>
                                     </h3>
                                 </div>
                             </div>
