--- a/L1/selfcare.html
+++ b/L1/selfcare.html
@@ -210,7 +210,7 @@
             <div class="container">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="recreation-activity" data-bs-toggle="tab" data-bs-target="#recreation-activity" type="button" role="tab" aria-controls="photo" aria-selected="true">Recreation Activity</button>
+                        <button class="nav-link active" id="recreation-activity" data-bs-toggle="tab" data-bs-target="#mind-game" type="button" role="tab" aria-controls="photo" aria-selected="true">Recreation Activity</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="video-tab" data-bs-toggle="tab" data-bs-target="#video" type="button" role="tab" aria-controls="video" aria-selected="false">Video</button>
@@ -219,7 +219,7 @@
                 </ul>
 
                 <div class="tab-content mt-40" id="myTabContent">
-                    <div class="tab-pane fade show active" id="recreation-activity" role="tabpanel" aria-labelledby="photo-tab">
+                    <div class="tab-pane fade show active" id="mind-game" role="tabpanel" aria-labelledby="recreation-activity">
                         <!--Gallery Page Start-->
                         <div class="row">
                             <div class="col-lg-4">
