--- a/L1/about-sattva.html
+++ b/L1/about-sattva.html
@@ -236,19 +236,26 @@
                                     <br> Your Psychiatrist
                                 </h2>
                             </div>
-                            <div class="about-one__experience-and-points">
+                            <div class="about-one__experience-and-points about-page">
 
                                 <div class="about-one__experience-points-box">
                                     <p class="about-one__experience-points-text">
-                                        Dr. Yashika Nathani, M.B.B.S, MD., is a board-certified psychiatrist and a practicing clinician with a certificate of additional qualifications in Cognitive Behaviour Therapy (CBT) from NIMHANS Bengaluru Beck institute. Perinatal mental health and Deaddiction psychiatry from Nimhans.
+                                        Dr. Yashika Nathani, M.B.B.S, MD, is a board-certified psychiatrist and a practicing clinician with a certificate of additional qualifications in Cognitive Behaviour Therapy (CBT) from Beck Institute and Perinatal mental health and De Addiction psychiatry from NIMHANS, Bengaluru. 
                                     </p>
                                     <p class="about-one__experience-points-text mt-20">
-                                        Dr. Yashika Sattava: She is involved in research related to adolescent problems, suicide prevention, and mental health awareness among the general population, modalities like mindfulness & meditation.
+                                        She is also involved in research related to adolescent problems, suicide prevention, and mental health awareness among the general population and also modalities like mindfulness & meditation.
+
                                     </p>
                                     <p class="about-one__experience-points-text mt-20">
-                                        She is trained in holistic and integrated management of patients with conditions like depression, schizophrenia, alcohol and other substance use disorders, bipolar mood disorder, obsessive-compulsive disorder, and many others. She also has expertise in counseling and therapy.
+                                        She is trained in comprehensive and integrated management of patients with conditions like depression, schizophrenia, alcohol and other substance use disorders, bipolar mood disorder, obsessive-compulsive disorder, and many others. She also has expertise in incorporating different therapies like art, breathing, muscle relaxation alongside counseling, pharmacotherapy , psychosocial management with family therapy.
                                     </p>
+                                    <div class="about-one__sign-and-btn">
+                                        <div class="about-one__btn-box">
+                                            <a href="https://g.co/kgs/gP3TNdm" class="about-one__btn thm-btn" target="_blank">Know More</a>
+                                        </div>
+                                    </div>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
