--- a/L1/addiction.html
+++ b/L1/addiction.html
@@ -190,7 +190,7 @@
         <!-- Book Appoinment button ends -->
 
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/new/therapy\ \(5\).jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/new-home/addiction-service/main-banner.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -258,20 +258,18 @@
                                 <ul class="services-details__documents-list list-unstyled mt-20">
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
-                                            <h3><a href="#">Control Self Esteem</a></h3>
-                                            <p>3.9KB</p>
+                                            <h3><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3164585/" target="_blank">Further Reading Behavioral Addiction</a></h3>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
-                                            <h3><a href="#">How to Save Yourself</a></h3>
-                                            <p>3.9KB</p>
+                                            <h3><a href="https://www.ncbi.nlm.nih.gov/books/NBK570642/" target="_blank">Further Reading Drug Addictions</a></h3>
                                         </div>
                                     </li>
                                 </ul>
