--- a/L1/childhood-disorders.html
+++ b/L1/childhood-disorders.html
@@ -190,7 +190,7 @@
         <!-- Book Appoinment button ends -->
 
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/new/therapy\ \(5\).jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/new-home/childhood-disorders/main-banner.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -258,7 +258,7 @@
                                 <ul class="services-details__documents-list list-unstyled mt-20">
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
                                             <h3><a href="#">Control Self Esteem</a></h3>
@@ -267,7 +267,7 @@
                                     </li>
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
                                             <h3><a href="#">How to Save Yourself</a></h3>
