--- a/L1/sattva-ourdocs.html
+++ b/L1/sattva-ourdocs.html
@@ -190,11 +190,11 @@
         <!-- Book Appoinment button ends -->
 
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/pictures/ourdoctorsbg.jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/new-home/team/main-banner.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
-                    <h2>Our<br>Doctors</h2>
+                    <h2>Our Doctors</h2>
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
@@ -226,9 +226,9 @@
                                 </div>
                                 <div class="team-details__social">
 
-                                    <a href="https://wa.link/jl5qi0"><i class="fab fa-whatsapp"></i></a>
+                                    <a href="https://wa.link/jl5qi0" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
-                                    <a href="https://www.instagram.com/my_indfull?utm_source=qr&igsh=eHVheHgwdmVicTh3"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/my_indfull?utm_source=qr&igsh=eHVheHgwdmVicTh3" target="_blank"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                         <div class="team-details__left">
                             <div class="team-details__right-content">
                                 <h3>Dr.Yashika Nathani</h3>
-                                <p class="team-details__text"><strong>Dr.Yashika Nathani</strong> I completed my post graduation from Nagpur, then moved to Madurai for 1 year , practised there at a deaddiction Center and a psychiatry hospital then came back to my home town Vadodara, Gujarat to practise as a consultant psychiatrist . Currently i work as consultant psychiatrist at my own center ,Sattva mental health and wellness center, wherein we have a holistic approach towards patients mental health condition. We provide comprehensive and customized care to all our patients for all their mental health needs. We believe that mental health is as important as physical health and a basic human right . If we are happy we can spread more smiles and live a fulfilling life .</p>
+                                <p class="team-details__text">I completed my post graduation from Nagpur, then moved to Madurai for 1 year , practised there at a deaddiction Center and a psychiatry hospital then came back to my home town Vadodara, Gujarat to practise as a consultant psychiatrist . Currently i work as consultant psychiatrist at my own center ,Sattva mental health and wellness center, wherein we have a holistic approach towards patients mental health condition. We provide comprehensive and customized care to all our patients for all their mental health needs. We believe that mental health is as important as physical health and a basic human right . If we are happy we can spread more smiles and live a fulfilling life .</p>
 
                             </div>
                         </div>
@@ -248,8 +248,7 @@
                         <div class="team-details__left">
                             <div class="team-details__right-content">
                                 <h3>Dr.Dhwanit Khetwani</h3>
-                                <p class="team-details__text">
-                                    <strong>Dr.Dhwanit Khetwani</strong> An Oculoplastic surgeon, with 7 years experience in the field of eye surgery, has vast number of surgeries under his belt and is currently working as a consultant in the city of Vadodara. He received his Oculoplasty fellowship training from the prestigious Aravind Eye hospital, Madurai. He has done more than 3000 surgeries including Eyelid, orbit, Ocular tumours, ocular surface, Cataract and so on.
+                                <p class="team-details__text">An Oculoplastic surgeon, with 7 years experience in the field of eye surgery, has vast number of surgeries under his belt and is currently working as a consultant in the city of Vadodara. He received his Oculoplasty fellowship training from the prestigious Aravind Eye hospital, Madurai. He has done more than 3000 surgeries including Eyelid, orbit, Ocular tumours, ocular surface, Cataract and so on.
                                 </p>
                             </div>
                         </div>
@@ -266,10 +265,10 @@
                                 </div>
                                 <div class="team-details__social">
 
-                                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                                    <a href="https://wa.link/jl5qi0" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
 
-                                    <a href="https://www.instagram.com/my_indfull?utm_source=qr&igshid=eHVheHgwdmVicTh3"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/oculo_drdhwanit/" target="_blank"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
