--- a/L1/pyshosis.html
+++ b/L1/pyshosis.html
@@ -258,7 +258,7 @@
                                 <ul class="services-details__documents-list list-unstyled mt-20">
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
                                             <h3><a href="#">Control Self Esteem</a></h3>
@@ -267,7 +267,7 @@
                                     </li>
                                     <li>
                                         <div class="icon">
-                                            <span class="icon-pdf-file"></span>
+                                            <span><img src="assets/images/new-home/link-icon.png" /></span>
                                         </div>
                                         <div class="content">
                                             <h3><a href="#">How to Save Yourself</a></h3>
