--- a/L1/stress-anger.html
+++ b/L1/stress-anger.html
@@ -190,7 +190,7 @@
         <!-- Book Appoinment button ends -->
 
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/new/therapy\ \(5\).jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/new-home/stress-anger/main-banner.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -252,29 +252,6 @@
                                 <div class="banner-one__btn-box">
                                     <a href="contact.html" class="banner-one__btn thm-btn">Contact Now</a>
                                 </div>
-                            </div>
-                            <div class="services-details__documents">
-                                <h4 class="text-center">Click here to know more</h4>
-                                <ul class="services-details__documents-list list-unstyled mt-20">
-                                    <li>
-                                        <div class="icon">
-                                            <span class="icon-pdf-file"></span>
-                                        </div>
-                                        <div class="content">
-                                            <h3><a href="#">Control Self Esteem</a></h3>
-                                            <p>3.9KB</p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon">
-                                            <span class="icon-pdf-file"></span>
-                                        </div>
-                                        <div class="content">
-                                            <h3><a href="#">How to Save Yourself</a></h3>
-                                            <p>3.9KB</p>
-                                        </div>
-                                    </li>
-                                </ul>
                             </div>
                         </div>
                     </div>
